--- a/test.css
+++ b/test.css
@@ -76,17 +76,25 @@
 }
 
 .bw0 {
-  border-width: 1rem;
+  border-width: 0rem;
 }
 
 .bw1 {
-  border-width: 2rem;
+  border-width: 0.125rem;
 }
 
 .bw2 {
-  border-width: 2.5rem;
+  border-width: 0.25rem;
 }
 
 .bw3 {
-  border-width: 3rem;
+  border-width: 0.5rem;
+}
+
+.bw4 {
+  border-width: 1rem;
+}
+
+.bw5 {
+  border-width: 2rem;
 }
