--- a/test.css
+++ b/test.css
@@ -75,6 +75,8 @@
   border-color: var(--black);
 }
 
+
+
 .bw0 {
   border-width: 0rem;
 }
@@ -98,3 +100,61 @@
 .bw5 {
   border-width: 2rem;
 }
+
+@media (min-width: 42em) and (max-width: calc(62em - 1px)) {
+
+.bw0-s {
+  border-width: 0rem;
+}
+
+.bw1-s {
+  border-width: 0.125rem;
+}
+
+.bw2-s {
+  border-width: 0.25rem;
+}
+
+.bw3-s {
+  border-width: 0.5rem;
+}
+
+.bw4-s {
+  border-width: 1rem;
+}
+
+.bw5-s {
+  border-width: 2rem;
+}
+
+}
+
+@media (min-width: 62em) {
+
+.bw0-m {
+  border-width: 0rem;
+}
+
+.bw1-m {
+  border-width: 0.125rem;
+}
+
+.bw2-m {
+  border-width: 0.25rem;
+}
+
+.bw3-m {
+  border-width: 0.5rem;
+}
+
+.bw4-m {
+  border-width: 1rem;
+}
+
+.bw5-m {
+  border-width: 2rem;
+}
+
+}
+
+
